feat(irs):[#199] sonar issues fix